--- a/FeedItemCell.xib
+++ b/FeedItemCell.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
+<archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">800</int>
 		<string key="IBDocument.SystemVersion">10C540</string>
-		<string key="IBDocument.InterfaceBuilderVersion">761</string>
+		<string key="IBDocument.InterfaceBuilderVersion">762</string>
 		<string key="IBDocument.AppKitVersion">1038.25</string>
 		<string key="IBDocument.HIToolboxVersion">458.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">84</string>
+			<string key="NS.object.0">87</string>
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -50,7 +50,7 @@
 							<object class="IBUILabel" id="771708626">
 								<reference key="NSNextResponder" ref="38423178"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 29}, {728, 22}}</string>
+								<string key="NSFrame">{{11, 29}, {600, 22}}</string>
 								<reference key="NSSuperview" ref="38423178"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -78,7 +78,7 @@
 							<object class="IBUILabel" id="323167782">
 								<reference key="NSNextResponder" ref="38423178"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 5}, {728, 21}}</string>
+								<string key="NSFrame">{{11, 5}, {600, 21}}</string>
 								<reference key="NSSuperview" ref="38423178"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -104,7 +104,7 @@
 							<object class="IBUILabel" id="374006894">
 								<reference key="NSNextResponder" ref="38423178"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 82}, {728, 21}}</string>
+								<string key="NSFrame">{{11, 82}, {600, 21}}</string>
 								<reference key="NSSuperview" ref="38423178"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -127,7 +127,7 @@
 							<object class="IBUILabel" id="82195157">
 								<reference key="NSNextResponder" ref="38423178"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 53}, {728, 21}}</string>
+								<string key="NSFrame">{{11, 53}, {600, 21}}</string>
 								<reference key="NSSuperview" ref="38423178"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -146,7 +146,7 @@
 								<int key="IBUILineBreakMode">0</int>
 							</object>
 						</object>
-						<string key="NSFrameSize">{768, 110}</string>
+						<string key="NSFrameSize">{620, 110}</string>
 						<reference key="NSSuperview" ref="375904682"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -159,7 +159,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</object>
-				<string key="NSFrameSize">{768, 110}</string>
+				<string key="NSFrameSize">{620, 110}</string>
 				<reference key="NSSuperview"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
@@ -253,7 +253,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>DetailViewController</string>
 					<string>UIResponder</string>
-					<string>{{146, 621}, {768, 110}}</string>
+					<string>{{545, 666}, {620, 110}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -291,20 +291,32 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>detailItem</string>
 							<string>navigationBar</string>
-							<string>nibLoadedFeedItemCell</string>
 							<string>tableView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>id</string>
 							<string>UINavigationBar</string>
-							<string>UITableViewCell</string>
 							<string>UITableView</string>
 						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/DetailViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/NSObject+SBJSON.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/SBJsonWriter.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -584,6 +596,6 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<string key="IBDocument.LastKnownRelativeProjectPath">RackspaceCloud.xcodeproj</string>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<string key="IBCocoaTouchPluginVersion">84</string>
+		<string key="IBCocoaTouchPluginVersion">87</string>
 	</data>
 </archive>
